@@ -1429,7 +1429,11 @@ typedef unsigned __int64 VIEWER_OPTIONS;
 static const VIEWER_OPTIONS
 	VOPT_SAVEFILEPOSITION   = 0x0000000000000001ULL,
 	VOPT_AUTODETECTCODEPAGE = 0x0000000000000002ULL,
-	VOPT_NONE               = 0;
+	VOPT_NONE               = 0,
+	VOPT_SHOWTITLEBAR       = 0x0000000000000004ULL,
+	VOPT_SHOWKEYBAR         = 0x0000000000000008ULL,
+	VOPT_SHOWSCROLLBAR      = 0x0000000000000010ULL,
+	VOPT_QUICKVIEW          = 0x0000000000000020ULL;
 
 enum VIEWER_SETMODE_TYPES
 {
@@ -1703,6 +1707,7 @@ enum EDITOR_OPTIONS
 	EOPT_SHOWLINEBREAK     = 0x00000400,
 	EOPT_SHOWTITLEBAR      = 0x00000800,
 	EOPT_SHOWKEYBAR        = 0x00001000,
+	EOPT_SHOWSCROLLBAR     = 0x00002000,
 };
 
 
